--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
     <html>
     <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="src/style.css">
     <meta charset="utf-8">
 
     </head>
     <body>
-        <script src="libraries/p5.js"></script>
-        <script src="libraries/p5.dom.min.js"></script>
-        <script src="libraries/p5.sound.min.js"></script>
-        <script src="libraries/p5.play.js"></script>
-        <script src="sketch.js"></script>
-        <script src="Obstacle.js"></script>
-        <script src="Fruit.js"></script>
+        <script src="src/libraries/p5.js"></script>
+        <script src="src/libraries/p5.dom.min.js"></script>
+        <script src="src/libraries/p5.sound.min.js"></script>
+        <script src="src/libraries/p5.play.js"></script>
+        <script src="src/sketch.js"></script>
+        <script src="src/Obstacle.js"></script>
+        <script src="src/Fruit.js"></script>
     </body></html>
